--- a/src/components/Home/ConversationRoom/Message.module.css
+++ b/src/components/Home/ConversationRoom/Message.module.css
@@ -6,7 +6,6 @@
     padding: 6px 7px 8px 9px;
     background-color: rgb(20, 77, 55);
     color: white;
-    opacity: 100;
   }
 
   .otherMessage {
